# weather-mcp-server

./: .gitignore  CS 554 - Assignment 3_ Model Context Protocol and Model Distillation.md  Deliverables.md  GOOGLE_DOCS_OUTLINE.md  README.md  SETUP_OTHER_MACHINE.md  TASK3_DELIVERABLES.md  bert_dist.py  calc.py  git_setup.ps1  pyproject.toml  setup_claude_desktop.ps1  test_weather_direct.py  weather.py
