[project]
name = "weather-mcp-server"
version = "0.1.0"
description = "MCP Server for Weather API, Calculator, and Model Distillation Assignment"
requires-python = ">=3.10"
dependencies = [
    # Task 1: Weather MCP Server
    "httpx>=0.28.1",
    "mcp[cli]>=1.23.1",
    # Task 2: Calculator MCP Server
    "sympy>=1.12",
    # Task 4: Model Distillation
    "transformers>=4.30.0",
    "datasets>=2.14.0",
    "evaluate>=0.4.0",
    "torch>=2.0.0",
    "accelerate>=0.20.0",
    "tqdm>=4.65.0",
]
